--- a/package.json
+++ b/package.json
@@ -4,18 +4,29 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon src/index",
     "build": "webpack",
     "dev": "webpack serve"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.1",
+    "jquery": "^3.1.1",
+    "mongoose": "^6.6.5",
+    "nodemon": "^2.0.20"
+  },
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "@babel/preset-env": "^7.19.3",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
+    "path-browserify": "^1.0.1",
     "sass": "^1.55.0",
     "sass-loader": "^13.1.0",
     "style-loader": "^3.3.1",
