--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index",
-    "build": "webpack",
+    "build": "nodemon src/index",
     "dev": "webpack serve"
   },
   "keywords": [],
